--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -5,11 +5,21 @@
 
 version: 2
 updates:
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/server" # Location of package manifests
+  - package-ecosystem: "npm"
+    target-directoty: "dev"
+    directory: "/server"
+    open-pull-requests-limit: 5
     schedule:
-      interval: "daily"
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/client" # Location of package manifests
+      interval: "weekly"
+      day: "monday"
+      time: "10:00"
+      timezone: Europe/Bucharest
+  - package-ecosystem: "npm"
+    target-directoty: "dev"
+    directory: "/client"
+    open-pull-requests-limit: 5
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "monday"
+      time: "10:00"
+      timezone: Europe/Bucharest
