--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
       - "releases/*"
+    paths-ignore:
+      - '*.md'
+      - 'dependabot.yaml'
   workflow_dispatch:
 
 jobs:
