--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,6 +13,7 @@ on:
 jobs:
   deploy-backend:
     runs-on: ubuntu-latest
+    if: ${{ github.actor != 'dependabot[bot]' }}
     env:
       MONGO_DB_URI: ${{ secrets.MONGO_DB_URI }}
     steps:
