--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,16 +4,14 @@ on:
     branches:
       - main
     paths-ignore:
-      - '*.md'
-      - 'dependabot.yaml'
+      - "*.md"
+      - "dependabot.yaml"
   workflow_dispatch:
 
 jobs:
   deploy-backend:
     runs-on: ubuntu-latest
     if: ${{ github.actor != 'dependabot[bot]' }}
-    env:
-      MONGO_DB_URI: ${{ secrets.MONGO_DB_URI }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -23,47 +21,8 @@ jobs:
         with:
           genezio-version: latest
           token: ${{ secrets.GENEZIO_TOKEN }}
-
-      - name: Test genezio installation
-        run: genezio ls
-
-      # Check the project at https://app.genez.io
       - name: Deploy backend
         working-directory: ./server
-        run: npm i && genezio deploy
-
-      # Use this trick to upload the generated SDK as an artifact
-      # It will be used to deploy the frontend
-      - uses: actions/upload-artifact@v3
-        with:
-          name: genezio-generated-sdk
-          path: ./client/src/sdk
-
-  deploy-frontend:
-    needs: deploy-backend
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - uses: Genez-io/genezio-github-action@main
-        with:
-          genezio-version: latest
-          token: ${{ secrets.GENEZIO_TOKEN }}
-      - name: Test genezio installation
-        run: genezio ls
-      # Use this to download the generated SDK
-      - uses: actions/download-artifact@master
-        with:
-          name: genezio-generated-sdk
-          path: ./client/src/sdk
-      - name: Build the frontend code
-        working-directory: ./client
-        run: npm i && npm run build
-
-      # Make sure that you setup a subdomain in the `genezio.yaml` file
-      # The frontend can be accessed at https://<your-subdomain>.app.genez.io
-      - name: Deploy the frontend for your project
-        working-directory: ./server
-        run: genezio deploy --frontend
+        run: genezio deploy
+        env:
+          CI: false
